--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ He does not know how to change the image.
 
 ## Education
 
-**UNAM Biotechnology Institute** | Cuernavaca, Mor
+**UNAM Biotechnology Institute** | Cuernavaca, Mo
 
 Bachelor degree in genomic sciences | September 2009 - Present
 
