--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ output:
 
 Joshua Rodriguez studies genomic sciences at the biotechnology institute. 
 He doesn't really know what he would like to do with his life but he loves biology and programming.
-He does not know how to change the image.
+He does not know how to change the image..
 
 ## Education
 
