--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Joshua Rodriguez"
-image: "frank.jpg"
+image: "aragorn.jpg"
 links:
   - label: GitHub
     url: "https://github.com/staticalcord7"
@@ -14,7 +14,7 @@ output:
 
 Joshua Rodriguez studies genomic sciences at the biotechnology institute. 
 He doesn't really know what he would like to do with his life but he loves biology and programming.
-He does not know how to change the image..
+He hates taking photos of himself, but loves his cat.
 
 ## Education
 
